--- a/css/style.css
+++ b/css/style.css
@@ -115,5 +115,11 @@ input[type="submit"]:hover{
 	margin-bottom: 30px;
 }
 
+@media screen and (max-width: 768px) {
+	#form_layout{
+		width: 70%;
+	}
+}
+
 
 
