--- a/css/style.css
+++ b/css/style.css
@@ -60,15 +60,15 @@ input[type="submit"]:hover{
 	background: linear-gradient(#0000000d, #000000);
 }
 .icon{
-	width: 246px;
-	margin-left: auto;
-	margin-right: auto;
+	display: grid;
+	grid-template-columns: 56px 56px 56px;
+	grid-gap: 20px;
+	justify-content: center;
 }
 .icon a{
 	background: linear-gradient(0deg, #ddd, #fff);
-	padding: 21px 9px;
+	padding: 8px 8px;
 	border-radius: 50%;
-	margin: 0 10px;
 }
 .icon .fa{
 	width: 40px;
@@ -78,7 +78,6 @@ input[type="submit"]:hover{
 	line-height: 40px;
 	border-radius: 50px;
 	transition: 0.5s;
-	margin-bottom: 50px;
 }
 
 .icon a .fb{
@@ -88,7 +87,7 @@ input[type="submit"]:hover{
 .icon a .fb:hover{
 	color: #fff;
 	background: #5d82d1;
-	transform: scale(1.5);
+	transform: scale(1.4);
 }
 
 .icon a .twt{
@@ -98,7 +97,7 @@ input[type="submit"]:hover{
 .icon a .twt:hover{
 	color: #fff;
 	background: #40bff5;
-	transform: scale(1.5);
+	transform: scale(1.4);
 }
 .icon a .ins{
 	color: #e4405f;
@@ -107,7 +106,7 @@ input[type="submit"]:hover{
 .icon a .ins:hover{
 	color: #fff;
 	background: #e4405f;
-	transform: scale(1.5);
+	transform: scale(1.4);
 }
 .icon h2{
 	text-align: center;
