collection in css
collection in css

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ input[type="submit"]:hover{
 	grid-template-columns: 56px 56px 56px;
 	grid-gap: 20px;
 	justify-content: center;
+	padding-bottom: 50px;
 }
 .icon a{
 	background: linear-gradient(0deg, #ddd, #fff);
